<resources>
    <string name="app_name">Food Bar Baz</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="showFavs">Favourites</string>
    <string name="account">Account</string>
    <string name="foodbarbaz_email">foodbarbaz@gmail.com</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="closed_drawer">Closed Drawer</string>
    <string name="resteraunt_name">Resteraunt Name</string>
    <string name="category">Category</string>
    <string name="address">Address</string>
    <string name="see_menu">See Menu</string>
    <string name="see_on_map">See on Map </string>
    <string name="fav" />
    <string name="favoff" />
    <string name="rating">Rating</string>
    <string name="todo">TODO</string>
    <string name="restaurants_around">Restaurants Near Me</string>
    <string name="testing">TESTING</string>
    <string name="back">Back</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="my_favourites">My Favourites</string>
    <string name="report">Report</string>
    <string name="my_history">My History</string>
    <string name="application_settings">Application Settings</string>
    <string name="postal_code_address_city">Postal Code / Address / City</string>
    <string name="scan_your_area">Scan your area!</string>
    <string name="foodbarbaz_logo">FoodBarBaz logo</string>
    <string name="search">Search</string>
    <string name="login">Login!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="i_m_hungry">I\'m Hungry</string>
    <string name="empty_username">Please do not leave this field empty!</string>
    <string name="Incorrect_login">Username or Password is incorrect</string>
    <string name="new_user_register_now">New User? Register Now!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="register">Register!</string>
    <string name="already_registered_login_here">Already registered? Login here!</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="password_match">Please make sure the passwords match!</string>
    <string name="connection_error">There was an error with your request. Please try again later...</string>
    <string name="in_x_activity">IN X ACTIVITY</string>
    <string name="in_development">In development</string>
    <string name="logout">Logout</string>
    <string name="user_logged_out">Logged out!</string>
    <string name="your_details">Your Details</string>
    <string name="username_details">Username:</string>
    <string name="first_name_deets">First Name</string>
    <string name="last_name_deets">Last Name</string>
    <string name="e_mail_deets">E-mail:</string>
    <string name="about_us">About Us</string>
    <string name="backToHome">Home</string>
    <string name="big_restaurant_image">Big restaurant image</string>
    <string name="title_activity_maps">Map</string>
    <string name="back_to_list">BACK</string>
    <string name="following_drawer">Following</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following">Following</string>
    <string name="follow_new_people">Follow new people</string>
    <string name="search_for_new_foodies">Search for new Foodies</string>
    <string name="who_i_m_following">Who I\'m Following</string>
    <string name="see_all_on_map">See All on Map</string>
    <string name="GPS_not_enabled">GPS SERVICE NOT ENABLED</string>
    <string name="turn_on_location">TURN ON LOCATION</string>
    <string name="cancel">Cancel</string>
    <string name="please_log_in_to_see_who_you_are_following">Please log in to see who you are following!</string>
    <string name="go_to_login_page">Go to Login page</string>
    <string name="scan_my_area">Use my location</string>
    <string name="scan_for_restaurants">Scan for restaurants</string>
    <string name="follow">Follow</string>
    <string name="find">FIND</string>
    <string name="choose_option_friend">Choose Option</string>
    <string name="placeholder">placeholder</string>
    <string name="choose_options">Choose Options</string>
    <string name="my_details">My Details</string>
    <string name="details">Details</string>
    <string name="social">Social</string>
    <string name="my_profile">My Profile</string>
    <string name="my_search_history">My Search History</string>
    <string name="oops">Oops!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save my changes</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="apply_changes">Apply Changes</string>
</resources>
