<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:orderInCategory="160"
        android:title="@string/account"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/social"
        android:icon="@drawable/social"
        android:orderInCategory="160"
        android:title="@string/social"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="180"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favs"
        android:orderInCategory="200"
        android:title="@string/favourites"
        app:showAsAction="never" />

</menu>