<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="yevoli.release.yev.foodbarbaz.HomePage"
    >

    <include
        android:id="@+id/include"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="40dp"
                android:background="@mipmap/foodbarbaz_round"
                android:contentDescription="@string/foodbarbaz_logo"
                android:scaleX="2"
                android:scaleY="2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/scan_for_restaurants"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/postal_code_address_city"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/teal"
                android:onClick="scanArea"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/takeMyLocation"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/teal"
                android:onClick="scanArea"
                android:text="@string/scan_my_area"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</android.widget.LinearLayout>
