<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="yevoli.release.yev.foodbarbaz.Login"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <include
            android:id="@+id/include"
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBarLogin"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="40dp"
                        android:background="@mipmap/foodbarbaz_round"
                        android:layout_gravity="center"
                        android:contentDescription="@string/foodbarbaz_logo"
                        android:scaleX="2"
                        android:scaleY="2" />

                    <TextView
                        android:id="@+id/textViewLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/login"
                        android:textAlignment="center"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/loginUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/loginPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:singleLine="true"
                            android:inputType="textPassword"/>

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="10dp"
                        android:background="@color/teal"
                        android:padding="10dp"
                        android:text="@string/i_m_hungry"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/buttonRegFromLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/teal"
                        android:padding="10dp"
                        android:text="@string/new_user_register_now"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
